<resources>
    <string name="app_name">দেখেচলো</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Mobile</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">LOGIN</string>
    <string name="action_registration">SIGN UP</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This Phone Number is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."

    </string>
    <string name="error_user_name">User name must be entered</string>
    <string name="error_user_photo">take your picture</string>
    <string name="error_gender">Select Your Gender</string>

    <string name="title_activity_main">MainActivity</string>


    <string name="error_already_exists">User Already Exists </string>
</resources>
