<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorBackground"
    android:weightSum="100"
    tools:context="com.example.ibnsina.socialtrafficmonitoring.LoginActivity">



    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"/>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_weight="30">

            <ImageButton
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:background="@drawable/ic_crossing_applogo"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22dp"
                android:textStyle="bold"
                android:gravity="center_horizontal"
                android:textColor="#E65100"
                android:shadowColor="@color/colorLime"
                android:shadowDx="4"
                android:shadowDy="2"
                android:text="@string/app_name"/>

        </LinearLayout>



        <ScrollView
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="70"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:background="@drawable/login_cardview"
                android:orientation="vertical"
                android:paddingBottom="0dp"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="ALREADY HAVE ACCOUNT?"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Login with your Username &amp; Password"
                    android:gravity="center"/>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/email"
                        android:background="@drawable/boder_oval"
                        android:layout_width="match_parent"
                        android:drawableLeft="@drawable/ic_vintage_cellphone"
                        android:layout_height="40dp"
                        android:paddingLeft="10dp"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:paddingLeft="10dp"
                        android:hint="@string/prompt_password"
                        android:imeActionId="@+id/login"
                        android:drawableLeft="@drawable/ic_lock"
                        android:background="@drawable/boder_oval"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>







                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        style="?android:textAppearanceSmall"
                        android:gravity="right"
                        android:id="@+id/txt_forgotpass"
                        android:text="Forgot Your Password"/>
`
                </LinearLayout>



                <Button
                    android:id="@+id/email_sign_in_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/side_nav_bar"
                    android:layout_marginTop="16dp"
                    android:text="@string/action_sign_in"
                    android:shadowColor="#A8A8A8"
                    android:shadowDx="4"
                    android:shadowDy="4"
                    android:shadowRadius="4"
                    android:textStyle="bold" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    style="?android:textAppearanceSmall"
                    android:gravity="center"
                    android:text="--- OR ---"/>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="100"
                    android:background="@drawable/login_cardview_create"
                    android:layout_height="50dp">

                    <TextView
                        style="?android:textAppearanceSmall"
                        android:layout_width="0dp"
                        android:layout_weight="65"
                        android:layout_marginLeft="16dp"
                        android:gravity="center|right"
                        android:textColor="@color/colorOrange_white"
                        android:layout_height="match_parent"
                        android:text="NEW TO THEME DESIGR ?"
                        android:textStyle="italic|bold|normal">
                    </TextView>

                    <TextView
                        style="?android:textAppearanceMedium"
                        android:id="@+id/txt_signup_button"
                        android:layout_width="0dp"
                        android:layout_weight="35"
                        android:layout_marginRight="16dp"
                        android:layout_marginLeft="5dp"
                        android:gravity="fill_vertical"
                        android:textColor="@color/colorOrange_text"
                        android:layout_height="match_parent"
                        android:text="@string/action_registration"
                        android:textStyle="bold|normal"/>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

</LinearLayout>
